[package]
name = "nvidia-tuner"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A simple Rust CLI tool for overlocking, undervolting and controlling the fan of NVIDIA GPUs on Linux. Using the NVML library it equally supports X11 and Wayland."
repository = "https://github.com/WickedLukas/nvidia-tuner.git"

[dependencies]
sudo2 = "0.2.1"
which = "8.0.0"
clap = { version = "4.5.39", features = ["derive"] }
nvml-wrapper = "0.11.0"
nvml-wrapper-sys = "0.9.0"
ctrlc = "3.4.7"
signal-hook = "0.3.18"

[profile.release]
lto = true
